--- a/1/initramfs/Makefile
+++ b/1/initramfs/Makefile
@@ -9,15 +9,9 @@ clean:
 		rm -rf build
 		find -name '*.o' -delete
 
-build/rootfs.gz: build/initramfs_root/init build/initramfs_root/stack_pop build/initramfs_root/stack_push
+build/rootfs.gz: build/initramfs_root/init
 		cd build/initramfs_root ; \
 		find -type f -print0 | cpio -0 -ov -H newc | gzip -9 > ../rootfs.gz
 
 build/initramfs_root/init: init.o
-		$(CC) -o $@ $^
-
-build/initramfs_root/stack_push: stack_push.o
-		$(CC) -o $@ $^
-
-build/initramfs_root/stack_pop: stack_pop.o
 		$(CC) -o $@ $^
